--- a/assets/css/override.css
+++ b/assets/css/override.css
@@ -1,10 +1,43 @@
 .header{
     background-color:#4aaaa5;
 }
+h1, h2, p {
+    font-family: 'Permanent Marker', cursive;
+    color: black;
+}
 #space {
     background-color: #4aaaa5;
     height: 5px;
     margin: 0 auto;
     width: inherit;
     clear: both;
+}
+.container {
+    position: relative;
+    text-align:center;
+    color:white;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    margin-bottom: 30px;
+    padding: 15px;
+}
+.centered {
+    position: absolute;
+    top: 65%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    background-color: #4aaaa5;
+    padding: 5px;
+    width:300px;
+    text-align: center;
+}
+
+#subject {
+    width: 750px;
+    height: 650px;
+    padding:10px;
+}
+.namebox {
+    height: 50px;
+    width: 300px;
+    padding: 5px;
 }
